<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_host"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/magicdns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_magicdns"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_port"
        android:inputType="number"
        android:importantForAutofill="no" />
</LinearLayout>
